fix password fields alignment

--- a/app/style/GetStarted.less
+++ b/app/style/GetStarted.less
@@ -280,7 +280,7 @@
   .content-title {
     font-size: 27px;
     line-height: 34px;
-    margin-bottom: 42px;
+    margin-bottom: 35px;
     width: 100%;
   }
 
